lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: top-comp
spec:
  selector:
    app: itdt-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
