lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: top-comp-ingress
spec:
  tls:
  - hosts:
    - top-comp.ru 
    secretName: top-comp-tls
  rules:
  - host: top-comp.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: top-comp
            port:
              number: 3000
